--- a/_config.yml
+++ b/_config.yml
@@ -1,30 +1,87 @@
-# Site info
+# Site settings 
 title: Low voltage. Mostly harmless...
+email: d.kovachev@gmail.com
+author: Dimitar Kovachev
 description: >
   Exploring electronics, programming and photography
+baseurl: ""
+url: "https://lowvoltage.github.io"
+host: 0.0.0.0
+date_format: "%b %-d, %Y"
+
+# Google services
 google_analytics: UA-101952232-1
-disqus:
-  shortname: lowvoltage
 
-# Personal info
-author: Dimitar Kovachev
-email: d.kovachev@gmail.com
+# Disqus post comments
+# (leave blank to disable Disqus)
+disqus_shortname: lowvoltage
+
+
+# Optional features
+animated:             false
+show_related_posts:   false
+show_post_footers:    false
+show_social_icons:    true
+ajaxify_contact_form: false
+enable_mathjax: false
+extended_fonts: true
+enable_anchorjs: false
+# Preview image for social media aka og:image and twitter:image
+post_preview_image: false
+
+# Social icons
 github_username: lowvoltage
-
-# Minima date format
-# refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
-minima:
-  date_format: "%b %-d, %Y"
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
 #header_pages:
 # - about.html
 
+
+# Post sharing icons
+show_sharing_icons: false
+# Change to 'true' to enable individual icons
+share_facebook: false
+share_twitter: false
+share_googleplus: false
+share_linkedin: false
+share_digg: false
+share_tumblr: false
+share_reddit: false
+share_stumbleupon: false
+share_hackernews: false
+
+text:
+  pagination:
+    newer: 'Newer'
+    older: 'Older'
+  share_buttons:
+    text:         'Share this post!'
+    facebook:     'Share on Facebook'
+    twitter:      'Share on Twitter'
+    googleplus:   'Share on Google+'
+    linkedin:     'Share on LinkedIn'
+    digg:         'Share on Digg'
+    tumblr:       'Share on Tumblr'
+    reddit:       'Share on Reddit'
+    stumbleupon:  'Share on StumbleUpon'
+    hackernews:   'Share on Hacker News'
+  post:
+    updated:        'Updated'
+    minute_read:    'minute read'
+    related_posts:  'Related Posts'
+  index:
+    coming_soon: 'Coming soon...'
+
+
 # Build settings
 markdown: kramdown
-theme: minima
-permalink: /:year/:month/:day/:title
+permalink: pretty
+paginate: 5
+gems:
+  - jekyll-feed
+  - jekyll-sitemap
+  - jekyll-paginate
 exclude:
   - Gemfile
   - Gemfile.lock
@@ -33,12 +90,5 @@ kramdown:
   input: GFM
   hard_wrap: false
   syntax_highlighter: rouge
-  extensions: fenced_code_blocks
-  syntax_highlighter_opts:
-    block:
-      line_numbers: true
 
-gems:
-  - jekyll-feed
-  - jekyll-sitemap
 
