--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ show_social_icons:    true
 ajaxify_contact_form: false
 enable_mathjax: false
 extended_fonts: true
-enable_anchorjs: false
+enable_anchorjs: true
 # Preview image for social media aka og:image and twitter:image
 post_preview_image: false
 
